scripts section 2 section 3

--- a/style.css
+++ b/style.css
@@ -29,9 +29,7 @@ a {
     text-decoration: none;
     color: #fff;
 }
-span, p, h1, h2, h3, h4, h5, h6{
-    color: #fff;
-} 
+
 p{
     margin: 20px 0px;
 }
@@ -90,6 +88,7 @@ header{
     margin-left: 178px;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .head__right--drop{
@@ -106,6 +105,32 @@ header{
     position: absolute;
     top: -10px;
     right: -37px;
+}
+
+.head__right__menu{
+    background: #000;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    padding: 5px 25px 5px 5px;
+    border-radius: 5px;
+    display: none;
+}
+.head__right__menu ul li a{
+    display: block;
+    margin-bottom: 5px;
+}
+
+.head__right__menu ul li a:hover{
+    color: #FFB548;
+}
+
+.menuShow{
+    display: block;
+}
+
+.head__right--img{
+    cursor: pointer;
 }
 
 .head__right--icons{
@@ -146,17 +171,14 @@ header{
 
 .head__foot img {
     margin-top: 8px;
+    margin-bottom: 50px;
+    cursor: pointer;
 }
 
 
 /************END_HEADER**********/
 /************GALLARY************/
 
-
-
-
-
-/************END_GALLARY********/
 
 .second{
     background-image: url('img/bg_image2.png');
@@ -165,6 +187,7 @@ header{
     background-repeat: no-repeat;
     height: 100vh;
     position: relative;
+    color: #fff;
 }
 
 .gallary{
@@ -199,7 +222,7 @@ header{
 
 .gallary__about__text{
     width: 365px;
-    margin-top: 70px;
+    margin-top: 110px;
     border: 1px solid red;
     margin-left: auto;
 }
@@ -223,3 +246,56 @@ header{
     height: 610px;
 }
 
+/************END_GALLARY********/
+.three{
+    background-image: url('img/bg_image3.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+
+}
+
+.features h3, .features h2 {
+    color: #fff;
+}
+.features{
+    border: 1px solid red;
+    margin-left: 50%;
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.feature__bold {
+    font-size: 36px;
+    color: #FFB548;
+    text-transform: uppercase;
+    display: block;
+}
+.feature__bold::before,
+.feature__bold:first-child::before{
+    content: '';
+    display: inline-block;
+    height: 14px;
+    width: 14px;
+    border-radius: 50%;
+    margin: 5px 18px 5px 0px; 
+}
+.feature__bold::before{
+    border: 1px solid #fff;
+}
+
+.feature__bold:first-child::before{
+    background: #fff;
+}
+
+.feature__sub{
+    display: block;
+    color: #fff;
+    font-size: 18px;
+    width: 362px;
+    padding-left: 36px;
+}
