--- a/style.css
+++ b/style.css
@@ -13,9 +13,11 @@ h1, h2, h3, h4, h5, h6 {
 
 h1, h2{
     font-size: 80px;
+    line-height: 1;
 }
 h3{
     font-size: 24px;
+    line-height: 1;
 }
 .container{
     width: 1240px;
@@ -159,6 +161,9 @@ header{
     margin-top: 28px;
     border-radius: 5px;
     box-shadow: 2px 2px 2px #000;
+}
+.head__content--btn:hover{
+    opacity: .7;
 }
 
 .head__content--buy{
@@ -428,12 +433,88 @@ header{
 
 .quotes__left{
     width: 50%;
-    border: 1px solid red;
+    height: auto;
+    margin: auto 0;
+}
+.quotes__left h3 {
+    margin-bottom: 8px;
+}
+
+.quotes__left p {
+    padding-right: 166px;
+    padding-bottom: 37px;
 }
 
 .quotes__right{
     width: 50%;
-    border: 1px solid red; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
+.quotes__card{
+    width: 452px;
+    height: 182px;
+    background: rgba(0,0,0,.8);
+    position: relative;
+    z-index: 1;
+    border-radius: 6px;
+    padding: 14px 16px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+}
+
+.quotes__card:nth-child(2){
+    margin-left: auto;
+}
+
+.quotes__card time {
+    margin: 16px 0;
+    font-size: 14px;
+    display: block;
+    color: #fff;
+}
+
+.quotes__card__head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 26px;
+}
+
+.quotes__card__photo img{
+    width: 65px;
+    height: 65px;
+    border-radius: 50%; 
+    position: relative;
+    z-index: 1;
+}
+
+.quotes__card__photo span{
+    display: block;
+    width: 65px;
+    height: 65px;
+    border-radius: 50%; 
+    background: #FFB548;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: translate(22px, 16px);
+}
+
+.quotes__card__personal{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding-left: 30px;
+}
+
+.quotes__card--name{
+    color: #FFB548;
+    text-transform: uppercase;
+}
+
+
+
 /*********END_QUOTES***********/
+
