--- a/style.css
+++ b/style.css
@@ -11,8 +11,12 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
 }
 
-h1, h2{
+h1{
     font-size: 80px;
+    line-height: 1;
+}
+h2{
+    font-size: 45px;
     line-height: 1;
 }
 h3{
@@ -37,7 +41,7 @@ p{
     margin: 20px 0px;
 }
 
-section, header{
+section, header, footer{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -518,3 +522,41 @@ header{
 
 /*********END_QUOTES***********/
 
+/*********NEWSLETTER***********/
+
+.six{
+    background-image: url('img/bg__footer.jpg');
+    color: #fff;
+    height: 80vh;
+}
+
+.newsletter{
+    height: 80vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.newsletter__left{
+    width: 40%;
+    border: 1px solid red;
+}
+
+.newsletter__right{
+    width: 60%;
+    border: 1px solid red;
+    padding-left: 65px;
+}
+.newsletter__right h3 {
+    margin-bottom: 8px;
+}
+.newsletter__right h2{
+    margin-bottom: 45px;
+}
+.newsletter__right p {
+    margin-bottom: 75px;
+}
+
+/*********END_NEWSLETTER*******/
+
+/*********FOOTER*******/
