--- a/style.css
+++ b/style.css
@@ -407,6 +407,7 @@ header{
 
 .requir{
     height: 100vh;
+    width: 100%;
 }
 
 .four h3 {
@@ -498,6 +499,7 @@ header{
 .quotes{
     display: flex;
     height: 100vh;
+    width: 100%;
 }
 
 .quotes__left{
@@ -600,6 +602,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 .newsletter__left{
@@ -655,6 +658,7 @@ header{
     padding: 10px 22px;
     border-radius: 5px;
     box-shadow: 2px 2px 2px #000;
+    margin-right: 20px;
 }
 
 .newsletter__right-adress input{
