--- a/adaptive.css
+++ b/adaptive.css
@@ -2,6 +2,10 @@
     .gallary__about{
         width: 43%;
     }
+    .footer__nav-menu{
+        font-size: 14px;
+    }
+
 }
 @media screen and (max-width: 1200px) {
     h1 span{
@@ -61,6 +65,15 @@
     .gallary__pics__box img{
         width: 350px;
         height: 400px;
+    }
+    .footer__nav{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex: 1;
+    }
+    .footer__nav-social{
+        margin-top: 20px;
     }
 }
 
@@ -142,7 +155,12 @@
         margin-left: 30%;
         width: 70%;
     }
-
+    .footer__nav-menu li{
+        margin-left: 10px;
+    }
+    .footer__nav-menu li a {
+        font-size: 12px;
+    }
 }
 
 @media screen and (max-width: 620px) {
